# terminal_docker

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: app.sh
src/: config.py  main.py
src/classes/: Crypto.py  Terminal.py
src/dao/: BaseDAO.py  MetaMaskDAO.py  TerminalAkksDAO.py  TerminalEventsDAO.py
src/migrations/: README  env.py
src/migrations/versions/: 02e4bf1163c2_terminal_akks.py  27a875ceaa7d_update_terminal_akks.py  384043f8e81c_update_terminal_akks.py  4a74aff67d22_initial_migration.py  53627864769c_add_terminal_events.py  ad93163ee9d0_add_terminal_akks.py  cd45fd8732de_add_terminal_events.py
src/models/: MetaMaskModel.py  TerminalAcountModel.py  TerminalEventModel.py
src/schemas/: SMetaMask.py  STerminalAkk.py  STerminalEvent.py
